# bibtools

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  configuration.yml  configure.py  csv2bib.py  csv2csv.py  csv2dois.py  csv2sheets.py  csv2wordcloud.py  doi2abstract.py  environment.yml  generate_wordcloud.py  ideas.md  pyproject.toml  readsheet.py  sheets2abstracts.py  sheets2bib.py  sheets2csv.py  sheets2dois.py  sheets2wordcloud.py  txt2csv.py  update_abstracts.py  utils.py
