[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bibtools"
version = "0.0.3"
dependencies = [
  "google-auth",
  "gspread",
  "pandas",
  "pyyaml",
  "requests",
  "requests-cache",
  "wordcloud",
]

[project.optional-dependencies]
dev = [
  "ruff", # linting
]
